--- a/src/styles.css
+++ b/src/styles.css
@@ -123,3 +123,17 @@ img.socialIcon {
   height: 30px;
   width: 30px;
 }
+/* add a smooth scroll */
+html {
+  scroll-behavior: smooth;
+}
+
+/* add a slide In Left animation */
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
